test/official_tests/constructor/default_arguments.lox
class Foo {}

var foo = Foo(1, 2, 3); // error: {"line":3,"message":"Function 'Foo::Foo' expected 0 arguments but got 3","type":"RuntimeError"}
